appId: com.souzaworks.mototake
---
- clearState
- launchApp
- extendedWaitUntil:
    visible:
      id: login-email
    timeout: 60000
- tapOn:
    id: login-email
- inputText: "__COURIEREMAIL__"
- tapOn:
    id: login-password
- inputText: "__PASSWORD__"
- tapOn:
    id: login-submit
- assertNotVisible: "Aprovar comprovante"
- assertNotVisible: "Rejeitar comprovante"
- assertNotVisible: "Marcar pagamento como pago"
- assertNotVisible: "Chave Pix"
