appId: com.souzaworks.mototake
---
- clearState
- launchApp
- extendedWaitUntil:
    visible:
      id: login-email
    timeout: 60000
- tapOn:
    id: login-email
- inputText: "__COURIEREMAIL__"
- tapOn:
    id: login-password
- inputText: "__PASSWORD__"
- tapOn:
    id: login-submit
- tapOn:
    id: courier-tab-companies
- assertVisible: "Empresas"
- assertVisible:
    id: courier-link-card
- tapOn:
    id: courier-tab-profile
- assertVisible:
    id: courier-profile-edit
- assertVisible:
    id: courier-logout
