appId: com.souzaworks.mototake
---
- clearState
- launchApp
- extendedWaitUntil:
    visible:
      id: login-email
    timeout: 60000
- tapOn:
    id: login-email
- inputText: "__COURIEREMAIL__"
- tapOn:
    id: login-password
- inputText: "__PASSWORD__"
- tapOn:
    id: login-submit
- stopApp
- launchApp
- extendedWaitUntil:
    visible:
      id: courier-tab-home
    timeout: 60000
- assertVisible:
    id: courier-tab-home
- tapOn:
    id: courier-tab-profile
- assertVisible: "Perfil"
